--- a/templates/usuario_logado.html
+++ b/templates/usuario_logado.html
@@ -3,5 +3,11 @@
 {% block title %}Home do Usuário{% endblock %}
 
 {% block conteudo %}
+
         <a class="nav-link disabled" href="#">Olá, {{ current_user.nome_do_usuario }}</a>
+        <a class="btn btn-primary" href="{{ url_for('') }}">Editar Informações</a>
+        <a class="btn btn-danger" href="{{ url_for('') }}">Sair</a>
+        <a class="btn btn-success" href="{{ url_for('') }}">Deletar</a>
+
+
 {% endblock %}
