--- a/templates/usuario_logado.html
+++ b/templates/usuario_logado.html
@@ -5,9 +5,9 @@
 {% block conteudo %}
 
         <a class="nav-link disabled" href="#">Olá, {{ current_user.nome_do_usuario }}</a>
-        <a class="btn btn-primary" href="{{ url_for('') }}">Editar Informações</a>
-        <a class="btn btn-danger" href="{{ url_for('') }}">Sair</a>
-        <a class="btn btn-success" href="{{ url_for('') }}">Deletar</a>
+        <a class="btn btn-primary" href="{{ url_for('edita_info_do_usuario') }}">Editar Informações</a>
+        <a class="btn btn-danger" href="{{ url_for('desloga_usuario') }}">Sair</a>
+        <a class="btn btn-success" href="{{ url_for('deleta_usuario') }}">Deletar</a>
 
 
 {% endblock %}
