--- a/templates/informacoes_do_usuario_logado.html
+++ b/templates/informacoes_do_usuario_logado.html
@@ -3,24 +3,24 @@
 {% block title %}Informações do Usuário{% endblock %}
 
 {% block conteudo %}
-        <form action="{{ url_for('') }}" method="post" enctype="multipart/form-data">
+        <form action="{{ url_for('edita_info_do_usuario') }}" method="post" enctype="multipart/form-data">
             <fieldset>
                 <h1>Faça seu cadastro</h1>
                 <div class="form-group">
                     <label for="nome">Nome</label>
-                    <input type="text" id="nome" name="nome" class="form-control" value="{{ }}" required>
+                    <input type="text" id="nome" name="nome" class="form-control" value="{{ current_user.nome_do_usuario }}" required>
 
                     <label for="email">Email</label>
-                    <input type="email" id="email" name="email" class="form-control" value="{{ }}" required>
+                    <input type="email" id="email" name="email" class="form-control" value="{{ current_user.email_do_usuario }}" required>
 
                     <label for="senha">Senha</label>
-                    <input type="password" id="senha" name="senha" class="form-control" value="{{ }}" required>
+                    <input type="password" id="senha" name="senha" class="form-control" value="{{ current_user.senha_do_usuario }}" required>
 
                     <label for="cpf">CPF</label>
-                    <input type="number" id="cpf" name="cpf" class="form control" value="{{ }}" min=1 required>
+                    <input type="number" id="cpf" name="cpf" class="form control" value="{{ current_user.cpf_do_usuario }}" min=1 required>
 
                     <label for="pis">PIS</label>
-                    <input type="number" id="pis" name="pis" class="form-control" value="{{ }}" min=1 required>
+                    <input type="number" id="pis" name="pis" class="form-control" value="{{ current_user.pis_do_usuario }}" min=1 required>
 
             <fieldset>
                 <div>
