--- a/templates/informacoes_do_usuario_logado.html
+++ b/templates/informacoes_do_usuario_logado.html
@@ -5,16 +5,13 @@
 {% block conteudo %}
         <form action="{{ url_for('edita_info_do_usuario') }}" method="post" enctype="multipart/form-data">
             <fieldset>
-                <h1>Faça seu cadastro</h1>
+                <h1>Atualize seus dados</h1>
                 <div class="form-group">
                     <label for="nome">Nome</label>
                     <input type="text" id="nome" name="nome" class="form-control" value="{{ current_user.nome_do_usuario }}" required>
 
                     <label for="email">Email</label>
                     <input type="email" id="email" name="email" class="form-control" value="{{ current_user.email_do_usuario }}" required>
-
-                    <label for="senha">Senha</label>
-                    <input type="password" id="senha" name="senha" class="form-control" value="{{ current_user.senha_do_usuario }}" required>
 
                     <label for="cpf">CPF</label>
                     <input type="number" id="cpf" name="cpf" class="form control" value="{{ current_user.cpf_do_usuario }}" min=1 required>
@@ -23,7 +20,7 @@
                     <input type="number" id="pis" name="pis" class="form-control" value="{{ current_user.pis_do_usuario }}" min=1 required>
 
             <fieldset>
-                <div>
+                <div class="form-group">
                     <label for="pais">País</label>
                     <select>
                         <option disabled selected>- Selecione -</option>
@@ -63,24 +60,24 @@
                     </select>
 
                     <label for="municipio">Município</label>
-                    <input type="text" id="municipio" name="municipio" class="form-control" value="{{ }}" required>
+                    <input type="text" id="municipio" name="municipio" class="form-control" value="{{ current_user.municipio_do_usuario }}" required>
 
                     <label for="cep">CEP</label>
-                    <input type="text" id="cep" name="cep" class="form-control" value="{{ }}" required>
+                    <input type="text" id="cep" name="cep" class="form-control" value="{{ current_user.cep_do_usuario }}" required>
 
                     <label for="rua">Rua</label>
-                    <input type="text" id="rua" name="rua" class="form-control" value="{{ }}" required>
+                    <input type="text" id="rua" name="rua" class="form-control" value="{{ current_user.rua_do_usuario }}" required>
 
                     <label for="numero">Número</label>
-                    <input type="number" id="numero" name="numero" class="form-control" value="{{ }}" min="1" required>
+                    <input type="number" id="numero" name="numero" class="form-control" value="{{ current_user.numero_da_rua }}" min="1" required>
 
                     <label for="complemento">Complemento</label>
-                    <input type="text" id="complemento" name="complemento" class="form-control" value="{{ }}" required>
+                    <input type="text" id="complemento" name="complemento" class="form-control" value="{{ current_user.complemento }}" required>
                 </div>
             </fieldset>
                 </div>
                 <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
-                <a class="btn btn-danger" href="{{ url_for('') }}">Voltar</a>
+                <a class="btn btn-danger" href="{{ url_for('mostra_menu_usuario') }}">Voltar</a>
             </fieldset>
         </form>
 {% endblock %}
