--- a/templates/usuario_logado.html
+++ b/templates/usuario_logado.html
@@ -1,24 +1,13 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Menu de Usuário</title>
-        <link rel="stylesheet" href="static/css/bootstrap.css">
-        <link rel="stylesheet" href="static/css/app.css">
-    </head>
-    <body>
+{% extends "template_geral.html" %}
 
+{% block title %}Home do Usuário{% endblock %}
 
-    <div class="header">
-        <a href="" class="logo">Sistema</a>
-        <div class="header-right">
-                <a href="{{ url_for('edita_info_do_usuario') }}">Editar Dados</a>
-                <a href="{{ url_for('desloga_usuario') }}">Sair</a>
-                <a href="{{ url_for('deleta_usuario') }}">Deletar</a>
-        </div>
-    </div>
+{% block conteudo %}
 
         <a class="nav-link disabled" href="#">Olá, {{ current_user.nome_do_usuario }}</a>
+        <a class="btn btn-primary" href="{{ url_for('edita_info_do_usuario') }}">Editar Informações</a>
+        <a class="btn btn-danger" href="{{ url_for('desloga_usuario') }}">Sair</a>
+        <a class="btn btn-success" href="{{ url_for('deleta_usuario') }}">Deletar</a>
 
 
+{% endblock %}
