Alterando type dos campos de cpf e pis

--- a/templates/cadastro_de_usuario.html
+++ b/templates/cadastro_de_usuario.html
@@ -17,10 +17,10 @@
                     <input type="password" id="senha" name="senha" minlength="4" maxlength="25" size="25" class="form-control" required>
 
                     <label for="cpf">CPF</label>
-                    <input type="number" id="cpf" name="cpf" class="form control" min="1" required>
+                    <input oninput="mascara(this)" type="text" id="cpf" name="cpf" class="form control" min="1" required>
 
                     <label for="pis">PIS</label>
-                    <input type="number" id="pis" name="pis" class="form-control" min="1" required>
+                    <input type="text" id="pis" name="pis" class="form-control" min="1" required>
 
             <fieldset>
                 <div>
