--- a/templates/informacoes_do_usuario_logado.html
+++ b/templates/informacoes_do_usuario_logado.html
@@ -14,10 +14,10 @@
                     <input type="email" id="email" name="email" class="form-control" value="{{ current_user.email_do_usuario }}" required>
 
                     <label for="cpf">CPF</label>
-                    <input type="number" id="cpf" name="cpf" class="form control" value="{{ current_user.cpf_do_usuario }}" min=1 required>
+                    <input oninput="mascara(this)" type="text" id="cpf" name="cpf" class="form control" value="{{ current_user.cpf_do_usuario }}" min=1 required>
 
                     <label for="pis">PIS</label>
-                    <input type="number" id="pis" name="pis" class="form-control" value="{{ current_user.pis_do_usuario }}" min=1 required>
+                    <input type="text" id="pis" name="pis" class="form-control" value="{{ current_user.pis_do_usuario }}" min=1 required>
 
             <fieldset>
                 <div class="form-group">
