Adicionando name e id no select de Estado

--- a/templates/informacoes_do_usuario_logado.html
+++ b/templates/informacoes_do_usuario_logado.html
@@ -25,13 +25,13 @@
             <fieldset>
                 <div class="form-group">
                     <label for="pais">País</label>
-                    <select>
+                    <select name="pais" id="pais">
                         <option disabled selected>- Selecione -</option>
                         <option value="BR">Brasil</option>
                     </select>
 
                     <label>Estado</label>
-                    <select name="pais" id="pais">
+                    <select name="estado" id="estado">
                         <option disabled selected>- Selecione -</option>
                         <option value="AC">Acre</option>
                         <option value="AL">Alagoas</option>
