--- a/templates/informacoes_do_usuario_logado.html
+++ b/templates/informacoes_do_usuario_logado.html
@@ -14,13 +14,13 @@
                     <input type="email" id="email" name="email" class="form-control" value="{{ current_user.email_do_usuario }}" required>
 
                     <label for="senha">Senha</label>
-                    <input type="password" id="senha" name="senha" minlength="4" maxlength="25" size="25" class="form-control" required>
+                    <input type="password" id="senha" name="senha" minlength="4" maxlength="25" size="25" class="form-control" value="{{ current_user.senha_do_usuario }}" required>
 
                     <label for="cpf">CPF</label>
                     <input oninput="mascara(this)" type="text" id="cpf" name="cpf" class="form control" value="{{ current_user.cpf_do_usuario }}" min=1 required>
 
                     <label for="pis">PIS</label>
-                    <input type="text" id="pis" name="pis" class="form-control"  min=1 required>
+                    <input type="text" id="pis" name="pis" class="form-control" value="{{ current_user.pis_do_usuario }}" min=1 required>
 
             <fieldset>
                 <div class="form-group">
@@ -63,19 +63,19 @@
                     </select>
 
                     <label for="municipio">Município</label>
-                    <input type="text" id="municipio" name="municipio" class="form-control" required>
+                    <input type="text" id="municipio" name="municipio" class="form-control" value="{{ request.args.get('municipio') }}" required>
 
                     <label for="cep">CEP</label>
-                    <input type="text" id="cep" name="cep" class="form-control" required>
+                    <input type="text" id="cep" name="cep" class="form-control" value="{{ request.args.get('cep') }}" required>
 
                     <label for="rua">Rua</label>
-                    <input type="text" id="rua" name="rua" class="form-control" required>
+                    <input type="text" id="rua" name="rua" class="form-control" value="{{ request.args.get('rua }}" required>
 
                     <label for="numero">Número</label>
-                    <input type="number" id="numero" name="numero" class="form-control" min="1" required>
+                    <input type="number" id="numero" name="numero" class="form-control" value="{{ request.args.get('numero') }}" min="1" required>
 
                     <label for="complemento">Complemento</label>
-                    <input type="text" id="complemento" name="complemento" class="form-control" required>
+                    <input type="text" id="complemento" name="complemento" class="form-control" value="{{ request.args.get('complemento') }}" required>
                 </div>
             </fieldset>
                 </div>
