Adicionando valores nos campos para edição do usuário

--- a/templates/informacoes_do_usuario_logado.html
+++ b/templates/informacoes_do_usuario_logado.html
@@ -63,19 +63,19 @@
                     </select>
 
                     <label for="municipio">Município</label>
-                    <input type="text" id="municipio" name="municipio" class="form-control" value="{{ request.args.get('municipio') }}" required>
+                    <input type="text" id="municipio" name="municipio" class="form-control" value="{{ current_user.municipio_do_usuario }}" required>
 
                     <label for="cep">CEP</label>
-                    <input type="text" id="cep" name="cep" class="form-control" value="{{ request.args.get('cep') }}" required>
+                    <input type="text" id="cep" name="cep" class="form-control" value="{{ current_user.cep_do_usuario }}" required>
 
                     <label for="rua">Rua</label>
-                    <input type="text" id="rua" name="rua" class="form-control" value="{{ request.args.get('rua }}" required>
+                    <input type="text" id="rua" name="rua" class="form-control" value="{{ current_user.rua_do_usuario }}" required>
 
                     <label for="numero">Número</label>
-                    <input type="number" id="numero" name="numero" class="form-control" value="{{ request.args.get('numero') }}" min="1" required>
+                    <input type="number" id="numero" name="numero" class="form-control" value="{{ current_user.numero_da_rua }}" min="1" required>
 
                     <label for="complemento">Complemento</label>
-                    <input type="text" id="complemento" name="complemento" class="form-control" value="{{ request.args.get('complemento') }}" required>
+                    <input type="text" id="complemento" name="complemento" class="form-control" value="{{ current_user.complemento }}" required>
                 </div>
             </fieldset>
                 </div>
