--- a/templates/template_geral.html
+++ b/templates/template_geral.html
@@ -30,6 +30,7 @@
             {% endwith %}
 
         {% block conteudo %}{% endblock %}
+        <script type="text/javascript" src="static/js/jquery.js"></script>
         <script type="text/javascript" src="static/js/app.js"></script>
         </div>
     </body>
