--- a/templates/usuario_logado.html
+++ b/templates/usuario_logado.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Menu do Usuário</title>
+        <title>{% block title %}{% endblock %}</title>
         <link rel="stylesheet" href="static/css/bootstrap.min.css">
         <link rel="stylesheet" href="static/css/app.css">
     </head>
@@ -12,7 +12,35 @@
         <a class="btn btn-danger" href="{{ url_for('desloga_usuario') }}">Sair</a>
         <a class="btn btn-success" href="{{ url_for('deleta_usuario') }}">Deletar</a>
         <a class="nav-link disabled" href="#">Olá, {{ current_user.nome_do_usuario }}</a>
-
     </header>
+    <body>
+        <div class="container">
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                    {% if messages %}
+                        {% for category, message in messages %}
+
+                        {% if category == 'success' %}
+                            <div class="alert alert-success">
+                                {{ message }}
+                            </div>
+                        {% endif %}
+
+                        {% if category == 'error' %}
+                            <div class="alert alert-danger">
+                                {{ message }}
+                            </div>
+                        {% endif %}
+
+                        {% endfor %}
+                    {% endif %}
+            {% endwith %}
+
+        {% block conteudo %}{% endblock %}
+        <script type="text/javascript" src="static/js/jquery.js"></script>
+        <script type="text/javascript" src="static/js/app.js"></script>
+        </div>
+    </body>
+</html>
+
 
 
