--- a/templates/informacoes_do_usuario_logado.html
+++ b/templates/informacoes_do_usuario_logado.html
@@ -3,7 +3,7 @@
 {% block title %}Informações do Usuário{% endblock %}
 
 {% block conteudo %}
-        <form action="{{ url_for('edita_info_do_usuario') }}" method="post" enctype="multipart/form-data">
+        <form action="{{ url_for('edita_info_do_usuario', id=request.args.get('id')) }}" method="post" enctype="multipart/form-data">
             <fieldset>
                 <h1>Atualize seus dados</h1>
                 <div class="form-group">
