Alteração rápida de size do campo de PIS

--- a/templates/cadastro_de_usuario.html
+++ b/templates/cadastro_de_usuario.html
@@ -20,7 +20,7 @@
                     <input oninput="mascara(this)" type="text" id="cpf" name="cpf" class="form control" min="1" required>
 
                     <label for="pis">PIS</label>
-                    <input type="text" id="pis" name="pis" class="form-control" min="1" required>
+                    <input type="text" id="pis" name="pis" class="form-control" minlength="12" maxlength="12" size="12" required>
 
             <fieldset>
                 <div>
