--- a/templates/informacoes_do_usuario_logado.html
+++ b/templates/informacoes_do_usuario_logado.html
@@ -8,19 +8,19 @@
                 <h1>Atualize seus dados</h1>
                 <div class="form-group">
                     <label for="nome">Nome</label>
-                    <input type="text" id="nome" name="nome" class="form-control" value="{{ current_user.nome_do_usuario }}" required>
+                    <input type="text" id="nome" name="nome" maxlength="26" size="26" class="form-control" value="{{ current_user.nome_do_usuario }}" required>
 
                     <label for="email">Email</label>
-                    <input type="email" id="email" name="email" class="form-control" value="{{ current_user.email_do_usuario }}" required>
+                    <input type="email" id="email" name="email" maxlength="64" size="64"  class="form-control" value="{{ current_user.email_do_usuario }}" required>
 
                      <label for="senha">Senha</label>
-                    <input type="password" id="senha" name="senha" minlength="4" maxlength="25" size="25" class="form-control" required>
+                    <input type="password" id="senha" name="senha" maxlength="25" size="25" class="form-control" required>
 
                     <label for="cpf">CPF</label>
                     <input oninput="mascara(this)" type="text" id="cpf" name="cpf" class="form control" value="{{ current_user.cpf_do_usuario }}" min=1 required>
 
                     <label for="pis">PIS</label>
-                    <input type="text" id="pis" name="pis" class="form-control" value="{{ current_user.pis_do_usuario }}" min=1 required>
+                    <input type="text" id="pis" name="pis" maxlength="14" size="14" class="form-control" value="{{ current_user.pis_do_usuario }}" min=1 required>
 
             <fieldset>
                 <div class="form-group">
@@ -63,19 +63,19 @@
                     </select>
 
                     <label for="municipio">Município</label>
-                    <input type="text" id="municipio" name="municipio" class="form-control" value="{{ current_user.municipio_do_usuario }}" required>
+                    <input type="text" id="municipio" name="municipio" maxlength="64" size="64" class="form-control" value="{{ current_user.municipio_do_usuario }}" required>
 
                     <label for="cep">CEP</label>
-                    <input type="text" id="cep" name="cep" class="form-control" value="{{ current_user.cep_do_usuario }}" required>
+                    <input type="text" id="cep" name="cep" maxlength="9" size="9" class="form-control" value="{{ current_user.cep_do_usuario }}" required>
 
                     <label for="rua">Rua</label>
-                    <input type="text" id="rua" name="rua" class="form-control" value="{{ current_user.rua_do_usuario }}" required>
+                    <input type="text" id="rua" name="rua" maxlength="64" size="64" class="form-control" value="{{ current_user.rua_do_usuario }}" required>
 
                     <label for="numero">Número</label>
                     <input type="number" id="numero" name="numero" class="form-control" value="{{ current_user.numero_da_rua }}" min="1" required>
 
                     <label for="complemento">Complemento</label>
-                    <input type="text" id="complemento" name="complemento" class="form-control" value="{{ current_user.complemento }}" required>
+                    <input type="text" id="complemento" name="complemento" maxlength="64" size="64" class="form-control" value="{{ current_user.complemento }}" required>
                 </div>
             </fieldset>
                 </div>
