Passando id de endereço como argumento

--- a/templates/usuario_logado.html
+++ b/templates/usuario_logado.html
@@ -9,9 +9,9 @@
     </head>
     <header>
         <h1>PROJETIN</h1>
-        <a class="btn btn-primary" href="{{ url_for('edita_info_do_usuario', id=current_user.id) }}">Editar Informações</a>
+        <a class="btn btn-primary" href="{{ url_for('edita_info_do_usuario', usuario_id=current_user.id) }}">Editar Informações</a>
         <a class="btn btn-danger" href="{{ url_for('desloga_usuario') }}">Sair</a>
-        <a class="btn btn-success" href="{{ url_for('deleta_usuario', id=current_user.id) }}">Deletar</a>
+        <a class="btn btn-success" href="{{ url_for('deleta_usuario', usuario_id=current_user.id, endereco_id=current_user.id) }}">Deletar</a>
         <a class="nav-link disabled" href="#">Olá, {{ current_user.nome_do_usuario }}</a>
     </header>
     <body>
