--- a/templates/informacoes_do_usuario_logado.html
+++ b/templates/informacoes_do_usuario_logado.html
@@ -1,86 +1,141 @@
-{% extends "template_geral.html" %}
+<!DOCTYPE html>
+<html>
 
-{% block title %}Informações do Usuário{% endblock %}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Menu Usuário</title>
+    <link rel="stylesheet" href="static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/css/app.css">
+</head>
 
-{% block conteudo %}
+<body>
+    <header>
+        <div class="navbar fixed-top navbar-dark bg-dark shadow-sm">
+            <div class="container d-flex justify-content-between">
+                <a class="navbar-brand d-flex align-items-center" href="#">Projetinho</a>
+
+                <a class="nav-link disabled" href="#">Olá, {{ current_user.nome_do_usuario }}</a>
+
+                <form class="navbar-form navbar-right" action="{{ url_for('desloga_usuario') }}">
+                    <button type="submit" class="btn btn-success">Sair</button>
+                </form>
+
+            </div>
+        </div>
+    </header>
+
+    <div class="container">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+
+                    {% if category == 'success' %}
+                        <div class="alert alert-success">
+                            {{ message }}
+                        </div>
+                    {% endif %}
+
+                    {% if category == 'error' %}
+                        <div class="alert alert-danger">
+                            {{ message }}
+                        </div>
+                    {% endif %}
+
+                    {% endfor %}
+                {% endif %}
+        {% endwith %}
+    </div>
+
+    <div>
         <form action="{{ url_for('edita_info_do_usuario', usuario_id=request.args.get('usuario_id'), endereco_id=endereco.endereco_id) }}" method="post" enctype="multipart/form-data">
             <fieldset>
                 <h1>Atualize seus dados</h1>
                 <div class="form-group">
-                    <label for="nome">Nome</label>
-                    <input type="text" id="nome" name="nome" maxlength="26" size="26" class="form-control" value="{{ current_user.nome_do_usuario }}" required>
+                    <div class="col-md-8">
+                        <label for="nome">Nome</label>
+                        <input type="text" id="nome" name="nome" maxlength="26" size="26" class="form-control" value="{{ current_user.nome_do_usuario }}" required>
 
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" maxlength="64" size="64"  class="form-control" value="{{ current_user.email_do_usuario }}" required>
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" maxlength="64" size="64"  class="form-control" value="{{ current_user.email_do_usuario }}" required>
 
-                     <label for="senha">Senha</label>
-                    <input type="password" id="senha" name="senha" maxlength="25" size="25" class="form-control" required>
+                         <label for="senha">Senha</label>
+                        <input type="password" id="senha" name="senha" maxlength="25" size="25" class="form-control" required>
 
-                    <label for="cpf">CPF</label>
-                    <input oninput="mascara(this)" type="text" id="cpf" name="cpf" class="form control" value="{{ current_user.cpf_do_usuario }}" min=1 required>
+                        <label for="cpf">CPF</label>
+                        <input data-js="cpf" type="text" id="cpf" name="cpf" class="form control" value="{{ current_user.cpf_do_usuario }}" min=1 required>
 
-                    <label for="pis">PIS</label>
-                    <input type="text" id="pis" name="pis" maxlength="14" size="14" class="form-control" value="{{ current_user.pis_do_usuario }}" min=1 required>
+                        <label for="pis">PIS</label>
+                        <input data-js="pis" type="text" id="pis" name="pis" maxlength="14" size="14" class="form-control" value="{{ current_user.pis_do_usuario }}" min=1 required>
+                    </div>
+                </div>
 
-            <fieldset>
                 <div class="form-group">
-                    <label for="pais">País</label>
-                    <select name="pais" id="pais">
-                        <option disabled selected>- Selecione -</option>
-                        <option value="BR">Brasil</option>
-                    </select>
+                    <div class="col-md-8">
+                        <label for="pais">País</label>
+                        <select name="pais" id="pais">
+                            <option disabled selected>- Selecione -</option>
+                            <option value="BR">Brasil</option>
+                        </select>
 
-                    <label>Estado</label>
-                    <select name="estado" id="estado">
-                        <option disabled selected>- Selecione -</option>
-                        <option value="AC">Acre</option>
-                        <option value="AL">Alagoas</option>
-                        <option value="AP">Amapá</option>
-                        <option value="AM">Amazonas</option>
-                        <option value="BA">Bahia</option>
-                        <option value="CE">Ceará</option>
-                        <option value="ES">Espírito Santo</option>
-                        <option value="GO">Goiás</option>
-                        <option value="MA">Maranhão</option>
-                        <option value="MT">Mato Grosso</option>
-                        <option value="MS">Mato Grosso do Sul</option>
-                        <option value="MG">Minas Gerais</option>
-                        <option value="PA">Pará</option>
-                        <option value="PB">Paraíba</option>
-                        <option value="PR">Paraná</option>
-                        <option value="PE">Pernambuco</option>
-                        <option value="PI">Piauí</option>
-                        <option value="RJ">Rio de Janeiro</option>
-                        <option value="RN">Rio Grande do Norte</option>
-                        <option value="RS">Rio Grande do Sul</option>
-                        <option value="RO">Rondônia</option>
-                        <option value="RR">Roraima</option>
-                        <option value="SC">Santa Catarina</option>
-                        <option value="SP">São Paulo</option>
-                        <option value="SE">Sergipe</option>
-                        <option value="TO">Tocantins</option>
-                        <option value="DF">Distrito Federal</option>
-                    </select>
+                        <label>Estado</label>
+                        <select name="estado" id="estado">
+                            <option disabled selected>- Selecione -</option>
+                            <option value="AC">Acre</option>
+                            <option value="AL">Alagoas</option>
+                            <option value="AP">Amapá</option>
+                            <option value="AM">Amazonas</option>
+                            <option value="BA">Bahia</option>
+                            <option value="CE">Ceará</option>
+                            <option value="ES">Espírito Santo</option>
+                            <option value="GO">Goiás</option>
+                            <option value="MA">Maranhão</option>
+                            <option value="MT">Mato Grosso</option>
+                            <option value="MS">Mato Grosso do Sul</option>
+                            <option value="MG">Minas Gerais</option>
+                            <option value="PA">Pará</option>
+                            <option value="PB">Paraíba</option>
+                            <option value="PR">Paraná</option>
+                            <option value="PE">Pernambuco</option>
+                            <option value="PI">Piauí</option>
+                            <option value="RJ">Rio de Janeiro</option>
+                            <option value="RN">Rio Grande do Norte</option>
+                            <option value="RS">Rio Grande do Sul</option>
+                            <option value="RO">Rondônia</option>
+                            <option value="RR">Roraima</option>
+                            <option value="SC">Santa Catarina</option>
+                            <option value="SP">São Paulo</option>
+                            <option value="SE">Sergipe</option>
+                            <option value="TO">Tocantins</option>
+                            <option value="DF">Distrito Federal</option>
+                        </select>
 
-                    <label for="municipio">Município</label>
-                    <input type="text" id="municipio" name="municipio" maxlength="64" size="64" class="form-control" value="{{ endereco.municipio_do_usuario }}" required>
+                        <label for="municipio">Município</label>
+                        <input type="text" id="municipio" name="municipio" maxlength="64" size="64" class="form-control" value="{{ endereco.municipio_do_usuario }}" required>
 
-                    <label for="cep">CEP</label>
-                    <input type="text" id="cep" name="cep" maxlength="9" size="9" class="form-control" value="{{ endereco.cep_do_usuario }}" required>
+                        <label for="cep">CEP</label>
+                        <input data-js="cep" type="text" id="cep" name="cep" maxlength="9" size="9" class="form-control" value="{{ endereco.cep_do_usuario }}" required>
 
-                    <label for="rua">Rua</label>
-                    <input type="text" id="rua" name="rua" maxlength="64" size="64" class="form-control" value="{{ endereco.rua_do_usuario }}" required>
+                        <label for="rua">Rua</label>
+                        <input type="text" id="rua" name="rua" maxlength="64" size="64" class="form-control" value="{{ endereco.rua_do_usuario }}" required>
 
-                    <label for="numero">Número</label>
-                    <input type="number" id="numero" name="numero" class="form-control" value="{{ endereco.numero_da_rua }}" min="1" required>
+                        <label for="numero">Número</label>
+                        <input type="number" id="numero" name="numero" class="form-control" value="{{ endereco.numero_da_rua }}" min="1" required>
 
-                    <label for="complemento">Complemento</label>
-                    <input type="text" id="complemento" name="complemento" maxlength="64" size="64" class="form-control" value="{{ endereco.complemento }}" required>
+                        <label for="complemento">Complemento</label>
+                        <input type="text" id="complemento" name="complemento" maxlength="64" size="64" class="form-control" value="{{ endereco.complemento }}" required>
+                    </div>
                 </div>
-            </fieldset>
-                </div>
+
                 <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
                 <a class="btn btn-danger" href="{{ url_for('mostra_menu_usuario') }}">Voltar</a>
+
             </fieldset>
         </form>
-{% endblock %}
+    </div>
+
+    <script type="text/javascript" src="static/js/jquery.js"></script>
+    <script type="text/javascript" src="static/js/app.js"></script>
+
+</body>
+</html>
