--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -1,19 +1,59 @@
-{% extends "template_geral.html" %}
+<!DOCTYPE html>
+<html>
 
-{% block title %}Home do Visitante{% endblock %}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Menu Usuário</title>
+    <link rel="stylesheet" href="static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/css/app.css">
+</head>
 
-{% block conteudo %}
-
-        <div class="container">
-            <a class="nav-link disabled" href="#">Olá, visitante</a>
-            <h1>Faça seu login</h1>
-            <form method="post" action="{{ url_for('loga_usuario') }}">
-                <p><label>Usúario:</label><input class="form-control" type="login" name="login" required></p>
-                <p><label>Senha:</label><input class="form-control" type="password" name="password" required></p>
-                <button type="submit" class="btn btn-primary btn-salvar">Entrar</button>
-                <a class="btn btn-success" href="{{ url_for('registra_usuario') }}">Cadastrar</a>
-            </form>
+<body>
+    <header>
+        <div class="navbar fixed-top navbar-dark bg-dark shadow-sm">
+            <div class="container d-flex justify-content-between">
+                <a class="navbar-brand d-flex align-items-center" href="#">Projetinho</a>
+                <a class="nav-link disabled" href="#">Olá, visitante</a>
+            </div>
         </div>
+    </header>
 
-{% endblock %}
+    <div class="container">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+
+                    {% if category == 'success' %}
+                        <div class="alert alert-success">
+                            {{ message }}
+                        </div>
+                    {% endif %}
+
+                    {% if category == 'error' %}
+                        <div class="alert alert-danger">
+                            {{ message }}
+                        </div>
+                    {% endif %}
+
+                    {% endfor %}
+                {% endif %}
+        {% endwith %}
+    </div>
+
+    <div class="container">
+        <h1>Faça seu login</h1>
+        <form method="post" action="{{ url_for('loga_usuario') }}">
+            <p><label>Usúario:</label><input class="form-control" placeholder="CPF, PIS ou E-mail" type="login" name="login" required></p>
+            <p><label>Senha:</label><input class="form-control" placeholder="Senha" type="password" name="password" required></p>
+            <button type="submit" class="btn btn-primary btn-salvar">Entrar</button>
+            <a class="btn btn-success" href="{{ url_for('registra_usuario') }}">Cadastrar</a>
+        </form>
+    </div>
+
+    <script type="text/javascript" src="static/js/jquery.js"></script>
+    <script type="text/javascript" src="static/js/app.js"></script>
+</body>
+</html>
+
 
