--- a/templates/usuario_logado.html
+++ b/templates/usuario_logado.html
@@ -1,47 +1,59 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>{% block title %}{% endblock %}</title>
-        <link rel="stylesheet" href="static/css/bootstrap.min.css">
-        <link rel="stylesheet" href="static/css/app.css">
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Menu Usuário</title>
+    <link rel="stylesheet" href="static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/css/app.css">
+</head>
+
+<body>
     <header>
-        <h1>PROJETIN</h1>
-        <a class="btn btn-primary" href="{{ url_for('edita_info_do_usuario', usuario_id=current_user.id) }}">Editar Informações</a>
-        <a class="btn btn-danger" href="{{ url_for('desloga_usuario') }}">Sair</a>
-        <a class="btn btn-success" href="{{ url_for('deleta_usuario', usuario_id=current_user.id, endereco_id=current_user.id) }}">Deletar</a>
-        <a class="nav-link disabled" href="#">Olá, {{ current_user.nome_do_usuario }}</a>
-    </header>
-    <body>
-        <div class="container">
-            {% with messages = get_flashed_messages(with_categories=true) %}
-                    {% if messages %}
-                        {% for category, message in messages %}
+        <div class="navbar fixed-top navbar-dark bg-dark shadow-sm">
+            <div class="container d-flex justify-content-between">
+                <a class="navbar-brand d-flex align-items-center" href="#">Projetinho</a>
 
-                        {% if category == 'success' %}
-                            <div class="alert alert-success">
-                                {{ message }}
-                            </div>
-                        {% endif %}
+                <a class="nav-link disabled" href="#">Olá, {{ current_user.nome_do_usuario }}</a>
 
-                        {% if category == 'error' %}
-                            <div class="alert alert-danger">
-                                {{ message }}
-                            </div>
-                        {% endif %}
+                <form class="navbar-form navbar-right" action="{{ url_for('desloga_usuario') }}">
+                    <button type="submit" class="btn btn-success">Sair</button>
+                </form>
 
-                        {% endfor %}
-                    {% endif %}
-            {% endwith %}
-
-        {% block conteudo %}{% endblock %}
-
-        <script type="text/javascript" src="static/js/jquery.js"></script>
-        <script type="text/javascript" src="static/js/app.js"></script>
+            </div>
         </div>
-    </body>
+    </header>
+
+    <div class="container">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+
+                    {% if category == 'success' %}
+                        <div class="alert alert-success">
+                            {{ message }}
+                        </div>
+                    {% endif %}
+
+                    {% if category == 'error' %}
+                        <div class="alert alert-danger">
+                            {{ message }}
+                        </div>
+                    {% endif %}
+
+                    {% endfor %}
+                {% endif %}
+        {% endwith %}
+    </div>
+
+
+    <a class="btn btn-primary" href="{{ url_for('edita_info_do_usuario', usuario_id=current_user.id) }}">Editar Informações</a>
+    <a class="btn btn-success" href="{{ url_for('deleta_usuario', usuario_id=current_user.id, endereco_id=current_user.id) }}">Deletar</a>
+
+    <script type="text/javascript" src="static/js/jquery.js"></script>
+    <script type="text/javascript" src="static/js/app.js"></script>
+</body>
 </html>
 
 
