Terminando de adicionar e estilizar o header do projeto e alinhando os formulários no centro da página

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -13,7 +13,7 @@
     <header>
         <div class="navbar fixed-top navbar-dark bg-dark shadow-sm">
             <div class="container d-flex justify-content-between">
-                <a class="navbar-brand d-flex align-items-center" href="#">Projetinho</a>
+                <a class="navbar-brand d-flex align-items-center" href="#">Cadastra, sô!</a>
                 <a class="nav-link disabled" href="#">Olá, visitante</a>
             </div>
         </div>
