--- a/templates/cadastro_de_usuario.html
+++ b/templates/cadastro_de_usuario.html
@@ -13,7 +13,7 @@
     <header>
         <div class="navbar fixed-top navbar-dark bg-dark shadow-sm">
             <div class="container d-flex justify-content-between">
-                <a class="navbar-brand d-flex align-items-center" href="#">Projetinho</a>
+                <a class="navbar-brand d-flex align-items-center" href="#">Cadastra, sô!</a>
                 <a class="nav-link disabled" href="#">Olá, visitante</a>
             </div>
         </div>
@@ -39,92 +39,79 @@
                     {% endfor %}
                 {% endif %}
         {% endwith %}
-    </div>
-    <div>
-        <form action="{{ url_for('registra_usuario') }}" method="post">
-            <fieldset>
-                <h1>Faça seu cadastro</h1>
-                <div class="form-group">
-                    <div class="col-md-8">
-                        <label class="col-md-4 control-label" for="nome">Nome</label>
-                        <input type="text" placeholder="Nome" id="nome" name="nome" maxlength="26" size="26" class="form-control input-md" required>
+        <form method="post" action="{{ url_for('registra_usuario') }}">
+            <h1>Faça seu cadastro</h1>
+                    <label class="col-md-4 control-label" for="nome">Nome</label>
+                    <input type="text" placeholder="Nome" id="nome" name="nome" maxlength="26" size="26" class="form-control input-md" required>
 
-                        <label class="col-md-4 control-label" for="email">Email</label>
-                        <input type="email" placeholder="exemplo@gmail.com" id="email" name="email" maxlength="64" size="64" class="form-control" required>
+                    <label class="col-md-4 control-label" for="email">Email</label>
+                    <input type="email" placeholder="exemplo@gmail.com" id="email" name="email" maxlength="64" size="64" class="form-control" required>
 
-                        <label class="col-md-4 control-label" for="senha">Senha</label>
-                        <input type="password" placeholder="Senha" id="senha" name="senha" minlength="4" maxlength="25" size="25" class="form-control" required>
+                    <label class="col-md-4 control-label" for="senha">Senha</label>
+                    <input type="password" placeholder="Senha" id="senha" name="senha" minlength="4" maxlength="25" size="25" class="form-control" required>
 
-                        <label class="col-md-4 control-label" for="cpf">CPF</label>
-                        <input data-js="cpf" type="text" placeholder="000.000.000-00" id="cpf" name="cpf" class="form control" min="1" required>
+                    <label class="col-md-4 control-label" for="cpf">CPF</label>
+                    <input data-js="cpf" type="text" placeholder="000.000.000-00" id="cpf" name="cpf" class="form-control" min="1" required>
 
-                        <label class="col-md-4 control-label" for="pis">PIS</label>
-                        <input data-js="pis" type="text" placeholder="000.00000.00-0" id="pis" name="pis" class="form-control" minlength="14" maxlength="14" size="14" required>
-                    </div>
-                </div>
+                    <label class="col-md-4 control-label" for="pis">PIS</label>
+                    <input data-js="pis" type="text" placeholder="000.00000.00-0" id="pis" name="pis" class="form-control" minlength="14" maxlength="14" size="14" required>
 
 
-                <div class="form-group">
-                    <div class="col-md-8">
-                        <label for="pais">País</label>
-                        <select name="pais" id="pais">
-                            <option disabled selected>- Selecione -</option>
-                            <option value="BR">Brasil</option>
-                        </select>
+                    <label for="pais" class="col-md-4 control-label">País</label>
+                    <select name="pais" id="pais" class="form-control">
+                        <option disabled selected>- Selecione -</option>
+                        <option value="BR">Brasil</option>
+                    </select>
 
-                        <label>Estado</label>
-                        <select name="estado" id="estado">
-                            <option disabled selected>- Selecione -</option>
-                            <option value="AC">Acre</option>
-                            <option value="AL">Alagoas</option>
-                            <option value="AP">Amapá</option>
-                            <option value="AM">Amazonas</option>
-                            <option value="BA">Bahia</option>
-                            <option value="CE">Ceará</option>
-                            <option value="ES">Espírito Santo</option>
-                            <option value="GO">Goiás</option>
-                            <option value="MA">Maranhão</option>
-                            <option value="MT">Mato Grosso</option>
-                            <option value="MS">Mato Grosso do Sul</option>
-                            <option value="MG">Minas Gerais</option>
-                            <option value="PA">Pará</option>
-                            <option value="PB">Paraíba</option>
-                            <option value="PR">Paraná</option>
-                            <option value="PE">Pernambuco</option>
-                            <option value="PI">Piauí</option>
-                            <option value="RJ">Rio de Janeiro</option>
-                            <option value="RN">Rio Grande do Norte</option>
-                            <option value="RS">Rio Grande do Sul</option>
-                            <option value="RO">Rondônia</option>
-                            <option value="RR">Roraima</option>
-                            <option value="SC">Santa Catarina</option>
-                            <option value="SP">São Paulo</option>
-                            <option value="SE">Sergipe</option>
-                            <option value="TO">Tocantins</option>
-                            <option value="DF">Distrito Federal</option>
-                        </select>
+                    <label for="estado" class="col-md-4 control-label">Estado</label>
+                    <select name="estado" id="estado" class="form-control">
+                        <option disabled selected>- Selecione -</option>
+                        <option value="AC">Acre</option>
+                        <option value="AL">Alagoas</option>
+                        <option value="AP">Amapá</option>
+                        <option value="AM">Amazonas</option>
+                        <option value="BA">Bahia</option>
+                        <option value="CE">Ceará</option>
+                        <option value="ES">Espírito Santo</option>
+                        <option value="GO">Goiás</option>
+                        <option value="MA">Maranhão</option>
+                        <option value="MT">Mato Grosso</option>
+                        <option value="MS">Mato Grosso do Sul</option>
+                        <option value="MG">Minas Gerais</option>
+                        <option value="PA">Pará</option>
+                        <option value="PB">Paraíba</option>
+                        <option value="PR">Paraná</option>
+                        <option value="PE">Pernambuco</option>
+                        <option value="PI">Piauí</option>
+                        <option value="RJ">Rio de Janeiro</option>
+                        <option value="RN">Rio Grande do Norte</option>
+                        <option value="RS">Rio Grande do Sul</option>
+                        <option value="RO">Rondônia</option>
+                        <option value="RR">Roraima</option>
+                        <option value="SC">Santa Catarina</option>
+                        <option value="SP">São Paulo</option>
+                        <option value="SE">Sergipe</option>
+                        <option value="TO">Tocantins</option>
+                        <option value="DF">Distrito Federal</option>
+                    </select>
 
-                        <label class="col-md-4 control-label" for="municipio">Município</label>
-                        <input type="text" id="municipio" placeholder="Município" name="municipio" maxlength="64" size="64" class="form-control" required>
+                    <label class="col-md-4 control-label" for="municipio">Município</label>
+                    <input type="text" id="municipio" placeholder="Município" name="municipio" maxlength="64" size="64" class="form-control" required>
 
-                        <label class="col-md-4 control-label" for="cep">CEP</label>
-                        <input data-js="cep" type="text" id="cep" placeholder="00000-000" name="cep" class="form-control" minlength="8" maxlength="10" size="10" required>
+                    <label class="col-md-4 control-label" for="cep">CEP</label>
+                    <input data-js="cep" type="text" id="cep" placeholder="00000-000" name="cep" class="form-control" minlength="8" maxlength="10" size="10" required>
 
-                        <label class="col-md-4 control-label" for="rua">Rua</label>
-                        <input type="text" id="rua" placeholder="Rua Exemplo" name="rua" class="form-control" maxlength="64" size="64" required>
+                    <label class="col-md-4 control-label" for="rua">Rua</label>
+                    <input type="text" id="rua" placeholder="Rua Exemplo" name="rua" class="form-control" maxlength="64" size="64" required>
 
-                        <label class="col-md-4 control-label" for="numero">Número</label>
-                        <input type="number" id="numero" placeholder="000" name="numero" class="form-control" min=1 required>
+                    <label class="col-md-4 control-label" for="numero">Número</label>
+                    <input type="number" id="numero" placeholder="000" name="numero" class="form-control" min=1 required>
 
-                        <label class="col-md-4 control-label" for="complemento">Complemento</label>
-                        <input type="text" id="complemento" placeholder="Apto 00" name="complemento" maxlength="64" size="64" class="form-control" required>
-                    </div>
-                </div>
+                    <label class="col-md-4 control-label" for="complemento">Complemento</label>
+                    <input type="text" id="complemento" placeholder="Apto 00" name="complemento" maxlength="64" size="64" class="form-control" required>
 
-                <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
-                <a class="btn btn-danger" href="{{ url_for('loga_usuario') }}">Voltar</a>
-
-            </fieldset>
+                    <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
+                    <a class="btn btn-danger" href="{{ url_for('loga_usuario') }}">Voltar</a>
         </form>
     </div>
 
