Adicionando o css dos botões de voltar, editar e excluir. Criando div com classe "botao" nas páginas html

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -12,6 +12,11 @@ body {
     width: 80%;
 }
 
+.botao {
+    margin-left: 138px;
+    margin-top: 15px;
+}
+
 .little-container {
     width: 40%;
     margin: auto;
