--- a/templates/cadastro_de_usuario.html
+++ b/templates/cadastro_de_usuario.html
@@ -110,9 +110,11 @@
                     <label class="col-md-4 control-label" for="complemento">Complemento</label>
                     <input type="text" id="complemento" placeholder="Apto 00" name="complemento" maxlength="64" size="64" class="form-control" required>
 
-                    <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
-                    <a class="btn btn-danger" href="{{ url_for('loga_usuario') }}">Voltar</a>
         </form>
+    </div>
+    <div class="botao">
+        <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
+        <a class="btn btn-danger" href="{{ url_for('loga_usuario') }}">Voltar</a>
     </div>
 
     <script type="text/javascript" src="static/js/jquery.js"></script>
