--- a/templates/usuario_logado.html
+++ b/templates/usuario_logado.html
@@ -83,10 +83,10 @@
                     <input id="complemento" class="form-control" value="{{ endereco.complemento }}" readonly>
 
         </form>
-
+    </div>
+    <div class="botao">
         <a class="btn btn-primary" href="{{ url_for('edita_info_do_usuario', usuario_id=current_user.id) }}">Editar Informações</a>
         <a class="btn btn-danger" href="{{ url_for('deleta_usuario', usuario_id=current_user.id, endereco_id=current_user.id) }}">Excluir usuário</a>
-
     </div>
 
     <script type="text/javascript" src="static/js/jquery.js"></script>
