--- a/templates/edita_info_do_usuario.html
+++ b/templates/edita_info_do_usuario.html
@@ -46,7 +46,7 @@
                 {% endif %}
         {% endwith %}
 
-        <form action="{{ url_for('edita_info_do_usuario', usuario_id=request.args.get('usuario_id'), endereco_id=endereco.endereco_id, token=token) }}" method="post" enctype="multipart/form-data">
+        <form action="{{ url_for('edita_info_do_usuario', usuario_id=request.args.get('usuario_id'), endereco_id=endereco.endereco_id) }}" method="post" enctype="multipart/form-data">
                 <h1>Atualize seus dados</h1>
                     <label for="nome" class="col-md-4 control-label">Nome</label>
                     <input type="text" id="nome" name="nome" maxlength="26" size="26" class="form-control" value="{{ current_user.nome_do_usuario }}" required>
@@ -118,7 +118,7 @@
 
             <div class="botao">
                 <button type="submit" class="btn btn-primary btn-salvar">Salvar</button>
-                <a class="btn btn-danger" href="{{ url_for('mostra_menu_usuario', usuario_id=request.args.get('usuario_id'), token=token) }}">Voltar</a>
+                <a class="btn btn-danger" href="{{ url_for('mostra_menu_usuario', usuario_id=request.args.get('usuario_id')) }}">Voltar</a>
             </div>
 
         </form>
