--- a/templates/registra_usuario.html
+++ b/templates/registra_usuario.html
@@ -51,7 +51,7 @@
                     <input type="password" placeholder="Senha" id="senha" name="senha" minlength="4" maxlength="25" size="25" class="form-control" required>
 
                     <label class="col-md-4 control-label" for="cpf">CPF</label>
-                    <input data-js="cpf" type="text" placeholder="000.000.000-00" id="cpf" name="cpf" class="form-control" min="1" required>
+                    <input data-js="cpf" type="text" placeholder="000.000.000-00" id="cpf" name="cpf" class="form-control" minlength="14" maxlength="14" size="14" required>
 
                     <label class="col-md-4 control-label" for="pis">PIS</label>
                     <input data-js="pis" type="text" placeholder="000.00000.00-0" id="pis" name="pis" class="form-control" minlength="14" maxlength="14" size="14" required>
